# Checkmate

./: .gitignore  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml
backend/: .gitignore  .pylintrc  Dockerfile  README.md  ai_agent.py  ai_tools.py  ci.sh  controller.py  example.txt  instructions.txt  json_stuff.py  main.py  models.py  openapi_schema.json  prompts.py  pyproject.toml  requirements.txt  search.py  sources.txt  trusted_sources.py  trusted_sources.txt
extension/: generate-api.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wxt.config.ts
extension/src/: app.css
extension/src/entrypoints/: background.ts  content.ts  get_text.content.ts  reddit.content.ts  select.content.ts  truthsocial.content.ts  twitter.content.ts  youtube.content.ts
extension/src/entrypoints/content/: Content.svelte
extension/src/entrypoints/popup/: Popup.svelte
extension/src/lib/: api.ts  backend-api.ts  messaging.ts  reddit_extract.ts  social_media_interfaces.ts  truthsocial_extract.ts  twitter_extract.ts  youtube_comment_extract.ts  youtube_extract.ts
extension/src/lib/api/: BackendClient.ts  index.ts
extension/src/lib/api/models/: AllMediaRequest.ts  FactCheckDetailsRequest.ts  FactCheckResult.ts  FactCheckSource.ts  Factoid.ts  ImageMediaRequest.ts  MediaCommentDetailsRequest.ts  MediaDetailsRequest.ts  SearchRequest.ts  SocialMediaDetailsRequest.ts  Verdict.ts  VideoMediaRequest.ts
extension/src/lib/api/services/: DefaultService.ts
extension/src/lib/components/: CheckInformation.svelte  FactCheckButton.svelte  FactDisplay.no  FactDisplay.svelte  FactStates.css  FullPageFactCheckButton.svelte  RedditCommentFactCheckButton.svelte  RedditFactCheckButton.svelte  SelectionPopup.svelte  TruthsocialFactCheckButton.svelte  YoutubeCommentFactCheckButton.svelte  YoutubeFactCheckButton.svelte
extension/src/lib/proxyservice/: backend.ts  factcheck.ts  factcheck_db.ts
extension/src/lib/repo/: backend.ts
extension/src/util/: fact_state.ts
