[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypercorn>=0.17.3",
    "litellm>=1.67.4.post1",
    "litestar[standard]>=2.15.2",
    "ollama>=0.4.8",
    "result>=0.17.0",
    "semantic-version>=2.10.0",
    "trio-asyncio>=0.15.0",
    "trio>=0.30.0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest-trio>=0.8.0", "pytest>=8.3.5", "ruff>=0.11.6"]

[tool.mypy]
disallow_untyped_defs = true
exclude = ["tests/"]

# Add other project configurations below if needed, e.g., [tool.black], [tool.pytest.ini_options]

[tool.pytest.ini_options]
testpaths = ["tests"]
trio_mode = true
# log_cli = true
log_cli = false
# log_cli_level = "DEBUG"
# log_cli_level = "INFO"
# log_cli_level = "WARN"
# log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
# Add other pytest options here if needed
# Example:
# addopts = ["-ra", "-q"]
