[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypercorn>=0.17.3",
    "litellm>=1.67.4.post1",
    "litestar[standard]>=2.15.2",
    "result>=0.17.0",
    "semantic-version>=2.10.0",
    "trio-asyncio>=0.15.0",
    "trio>=0.30.0",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.25",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.9.1",
    "mcp[cli]>=1.9.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
]
[tool.mypy]
disallow_untyped_defs = true
exclude = ["tests/"]

# Add other project configurations below if needed, e.g., [tool.black], [tool.pytest.ini_options]

[tool.pytest.ini_options]
testpaths = ["tests"]
trio_mode = true
# log_cli = true
log_cli = false
# log_cli_level = "DEBUG"
# log_cli_level = "INFO"
# log_cli_level = "WARN"
# log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
# Add other pytest options here if needed
# Example:
# addopts = ["-ra", "-q"]